[gd_scene load_steps=9 format=2]

[ext_resource path="res://image/player_sheet.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://image/shield.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.05

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 99, 77 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 198, 0, 99, 77 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 99, 0, 99, 77 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "straight ",
"speed": 5.0
} ]

[node name="player" type="Area2D"]
script = ExtResource( 2 )
speed = 300.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 5 )
animation = "straight "

[node name="FiringPositions" type="Node2D" parent="."]

[node name="leftGun" type="Node2D" parent="FiringPositions"]
position = Vector2( -34, -9 )

[node name="rightGun" type="Node2D" parent="FiringPositions"]
position = Vector2( 33, -10 )

[node name="firedelayTimer" type="Timer" parent="."]
one_shot = true

[node name="invicibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="shieldSprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[connection signal="timeout" from="invicibilityTimer" to="." method="_on_invicibilityTimer_timeout"]
